# aai_pjatk

./: .gitignore  README.md
.github/workflows/: ci.yaml
lab1/: pyproject.toml
lab1/raport/: FrąckowiakAA1.tex
lab1/src/: data.py  hyperparameters.yaml  main.py  model.py  testing.py  train.sh  training.py  utils.py
lab1/src/stats/: knn_1.json  knn_10.json  knn_3.json  knn_5.json  v1_100.json  v1_200.json  v2_100.json  v2_200.json
