[project]
name = "lab1"
version = "0.1.0"
authors = [
    { name = "Kajetan Frąckowiak" }
]
requires-python = ">=3.11, <3.12"

dependencies = [
    "torch>=2.0.0",
    "scikit-learn",
    "lightning",
    "wandb",
    "tqdm",
    "numpy",
    "matplotlib",
]

[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = [
    "ruff",
]

[tool.ruff]
line-length = 88
target-version = "py311"

